--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,18 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "sensio/framework-extra-bundle": "^5.2",
-        "symfony/console": "*",
-        "symfony/flex": "^1.1",
-        "symfony/framework-bundle": "*",
-        "symfony/yaml": "*",
+        "ext-json": "*",
         "guzzlehttp/guzzle": "^6.3",
         "psr/http-client": "^1.0",
-        "ext-json": "*"
+        "sensio/framework-extra-bundle": "^5.2",
+        "symfony/apache-pack": "^1.0",
+        "symfony/console": "*",
+        "symfony/flex": "^1.1",
+        "symfony/form": "*",
+        "symfony/framework-bundle": "*",
+        "symfony/twig-bundle": "*",
+        "symfony/webpack-encore-bundle": "^1.0",
+        "symfony/yaml": "*"
     },
     "require-dev": {
         "symfony/dotenv": "*"
