--- a/config/services.yaml
+++ b/config/services.yaml
@@ -13,10 +13,10 @@ services:
         public: false       # Allows optimizing the container by removing unused services; this also means
                             # fetching services directly from the container via $container->get() won't work.
                             # The best practice is to be explicit about your dependencies anyway.
-
     http_client:
-        class:    App\Service\ClientService
+        class:    GuzzleHttp\Client
         autowire: true
+
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
@@ -33,7 +33,8 @@ services:
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
 
-    App\Controller\ConvertController:
+    App\Service\ExchangeService:
+        autowire: true
         public: true
         bind:
             $client: '@http_client'
